--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-nav-bar></app-nav-bar>
-<div class="container" style="margin-top: 140px;">Welcome</div>
-
+<div class="container" style="margin-top: 140px">
+  <h1>{{ title }}</h1>
+  <ul>
+    <li class="list-unstyled" *ngFor="let product of products">{{ product.name }}</li>
+  </ul>
+</div>
