--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -27,7 +27,7 @@
       </ul>
     </section>
     <section class="col-9">
-      <div class="d-flex justify-content-between align-items center pb2">
+      <div class="d-flex justify-content-between align-items-center pb-2">
         <header>
           <span>
             Showing <strong>10</strong> of <strong>18</strong> results
@@ -36,12 +36,12 @@
         <div class="d-flex mt-2">
           <input type="text" placeholder="Search" class="form-control me-2" />
           <button class="btn btn-outline-primary mx-2">Search</button>
-          <button class="btn btn-outline-success mx-2">Reset</button>
+          <button class="btn btn-outline-success">Reset</button>
         </div>
       </div>
       <div class="row row-cols-3 g-3">
         <div class="col" *ngFor="let product of products">
-          <app-product-item></app-product-item>
+          <app-product-item [product]="product"></app-product-item>
         </div>
       </div>
     </section>
