--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -10,20 +10,15 @@
 
 
       <h5 class="text-warning my-3">Brands</h5>
-      <ul class="list-group">
-        <li class="list-group-item active">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
+      <ul class="list-group my-3">
+        <li class="list-group-item" *ngFor="let brand of brands">{{brand.name}}</li>
+
+
       </ul>
       <h5 class="text-warning ms-3">Types</h5>
-      <ul class="list-group">
-        <li class="list-group-item active">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-        <li class="list-group-item">A fourth item</li>
-        <li class="list-group-item">And a fifth one</li>
+      <ul class="list-group my-3">
+        <li class="list-group-item" *ngFor="let type of types">{{type.name}}</li>
+
       </ul>
     </section>
     <section class="col-9">
