--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -11,14 +11,21 @@
 
       <h5 class="text-warning my-3">Brands</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let brand of brands">{{brand.name}}</li>
-
-
+        <li class="list-group-item"
+            *ngFor="let brand of brands"
+            [class.active]="brand.id === brandIdSelected"
+            [value]="brand.id"
+            (click)="onBrandSelected(brand.id)"
+            >{{brand.name}}</li>
       </ul>
       <h5 class="text-warning ms-3">Types</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item" *ngFor="let type of types">{{type.name}}</li>
-
+        <li class="list-group-item"
+        *ngFor="let type of types"
+        [class.active]="type.id"
+        [value]="type.id"
+        (click)="onTypeSelected(type.id)"
+        >{{type.name}}</li>
       </ul>
     </section>
     <section class="col-9">
