Adding the sort functionality

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -2,10 +2,12 @@
   <div class="row">
     <section class="col-3">
       <h5 class="text-warning ms-3">Sort</h5>
-      <select class="form-select mb-4">
-        <option value="">Alphabetical</option>
-        <option value="">Price: Low to high</option>
-        <option value="">Price: High to low</option>
+      <select class="form-select mb-4" (change)="onSortSelected($event)">
+        <option *ngFor="let sort of sortOptions" [value]="sort.value">
+          {{sort.name}}
+        </option>
+
+
       </select>
 
 
@@ -22,7 +24,7 @@
       <ul class="list-group my-3">
         <li class="list-group-item"
         *ngFor="let type of types"
-        [class.active]="type.id"
+        [class.active]="type.id === typeIdSelected"
         [value]="type.id"
         (click)="onTypeSelected(type.id)"
         >{{type.name}}</li>
