Adding the pagination functionality

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -4,30 +4,33 @@
       <h5 class="text-warning ms-3">Sort</h5>
       <select class="form-select mb-4" (change)="onSortSelected($event)">
         <option *ngFor="let sort of sortOptions" [value]="sort.value">
-          {{sort.name}}
+          {{ sort.name }}
         </option>
-
-
       </select>
-
 
       <h5 class="text-warning my-3">Brands</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item"
-            *ngFor="let brand of brands"
-            [class.active]="brand.id === brandIdSelected"
-            [value]="brand.id"
-            (click)="onBrandSelected(brand.id)"
-            >{{brand.name}}</li>
+        <li
+          class="list-group-item"
+          *ngFor="let brand of brands"
+          [class.active]="brand.id === brandIdSelected"
+          [value]="brand.id"
+          (click)="onBrandSelected(brand.id)"
+        >
+          {{ brand.name }}
+        </li>
       </ul>
       <h5 class="text-warning ms-3">Types</h5>
       <ul class="list-group my-3">
-        <li class="list-group-item"
-        *ngFor="let type of types"
-        [class.active]="type.id === typeIdSelected"
-        [value]="type.id"
-        (click)="onTypeSelected(type.id)"
-        >{{type.name}}</li>
+        <li
+          class="list-group-item"
+          *ngFor="let type of types"
+          [class.active]="type.id === typeIdSelected"
+          [value]="type.id"
+          (click)="onTypeSelected(type.id)"
+        >
+          {{ type.name }}
+        </li>
       </ul>
     </section>
     <section class="col-9">
@@ -43,10 +46,14 @@
           <button class="btn btn-outline-success">Reset</button>
         </div>
       </div>
-      <div class="row row-cols-3 g-3">
+      <div class="row row-cols-3 g-3 m-4">
         <div class="col" *ngFor="let product of products">
           <app-product-item [product]="product"></app-product-item>
         </div>
+      </div>
+
+      <div class="d-flex justify-content-center">
+        <pagination [boundaryLinks]="true" [totalItems]="55"></pagination>
       </div>
     </section>
   </div>
