--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -13,7 +13,7 @@
         <li
           class="list-group-item"
           *ngFor="let brand of brands"
-          [class.active]="brand.id === brandIdSelected"
+          [class.active]="brand.id === shopParams.brandId"
           [value]="brand.id"
           (click)="onBrandSelected(brand.id)"
         >
@@ -25,7 +25,7 @@
         <li
           class="list-group-item"
           *ngFor="let type of types"
-          [class.active]="type.id === typeIdSelected"
+          [class.active]="type.id === shopParams.typeId"
           [value]="type.id"
           (click)="onTypeSelected(type.id)"
         >
@@ -53,7 +53,13 @@
       </div>
 
       <div class="d-flex justify-content-center">
-        <pagination [boundaryLinks]="true" [totalItems]="55"></pagination>
+        <pagination
+         [boundaryLinks]="true"
+         [totalItems]="totalCount"
+         [itemsPerPage]="shopParams.pageSize"
+         [maxSize]="10"
+         >
+        </pagination>
       </div>
     </section>
   </div>
