Adding the pagination functionality part 3

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -58,7 +58,7 @@
          [totalItems]="totalCount"
          [itemsPerPage]="shopParams.pageSize"
          [maxSize]="10"
-         >
+         (pageChanged)="onPageChanged($event)">
         </pagination>
       </div>
     </section>
