--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -36,9 +36,19 @@
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
         <header>
-          <span>
-            Showing <strong>10</strong> of <strong>18</strong> results
+          <span *ngIf="totalCount > 0">
+            Showing
+            <strong>
+              {{(shopParams.pageNumber -1) * shopParams.pageSize + 1}} -
+              {{shopParams.pageNumber * shopParams.pageSize
+                 > totalCount
+                 ? totalCount
+                 : shopParams.pageNumber * shopParams.pageSize
+              }}
+            </strong> of <strong>{{totalCount}}</strong> results
+
           </span>
+          <span *ngIf="totalCount === 0 ">There are <strong>0</strong> result for this filter</span>
         </header>
         <div class="d-flex mt-2">
           <input type="text" placeholder="Search" class="form-control me-2" />
@@ -52,7 +62,7 @@
         </div>
       </div>
 
-      <div class="d-flex justify-content-center">
+      <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
         <pagination
          [boundaryLinks]="true"
          [totalItems]="totalCount"
