--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -35,21 +35,11 @@
     </section>
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
-        <header>
-          <span *ngIf="totalCount > 0">
-            Showing
-            <strong>
-              {{(shopParams.pageNumber -1) * shopParams.pageSize + 1}} -
-              {{shopParams.pageNumber * shopParams.pageSize
-                 > totalCount
-                 ? totalCount
-                 : shopParams.pageNumber * shopParams.pageSize
-              }}
-            </strong> of <strong>{{totalCount}}</strong> results
-
-          </span>
-          <span *ngIf="totalCount === 0 ">There are <strong>0</strong> result for this filter</span>
-        </header>
+        <app-paging-header
+          [totalCount]="totalCount"
+          [pageSize]="shopParams.pageSize"
+          [pageNumber]="shopParams.pageNumber"
+        ></app-paging-header>
         <div class="d-flex mt-2">
           <input type="text" placeholder="Search" class="form-control me-2" />
           <button class="btn btn-outline-primary mx-2">Search</button>
@@ -64,11 +54,12 @@
 
       <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
         <pagination
-         [boundaryLinks]="true"
-         [totalItems]="totalCount"
-         [itemsPerPage]="shopParams.pageSize"
-         [maxSize]="10"
-         (pageChanged)="onPageChanged($event)">
+          [boundaryLinks]="true"
+          [totalItems]="totalCount"
+          [itemsPerPage]="shopParams.pageSize"
+          [maxSize]="10"
+          (pageChanged)="onPageChanged($event)"
+        >
         </pagination>
       </div>
     </section>
