--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -53,14 +53,11 @@
       </div>
 
       <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
-        <pagination
-          [boundaryLinks]="true"
-          [totalItems]="totalCount"
-          [itemsPerPage]="shopParams.pageSize"
-          [maxSize]="10"
-          (pageChanged)="onPageChanged($event)"
-        >
-        </pagination>
+        <app-pager
+          [totalCount]="totalCount"
+          [pageSize]="shopParams.pageSize"
+          (pageChangedOutput)="onPageChanged($event)">
+        </app-pager>
       </div>
     </section>
   </div>
