--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -3,9 +3,9 @@
 >
   <img src="/assets/images/logo.png" alt="logo" style="max-height: 70px" />
   <nav class="my-2 text-uppercase fs-4">
-    <a class="p-2 text-dark text-decoration-none" href="#">Home</a>
-    <a class="p-2 text-dark text-decoration-none" href="#">Shop</a>
-    <a class="p-2 text-dark text-decoration-none" href="#">Contact</a>
+    <a class="p-2 text-dark text-decoration-none" routerLink="/">Home</a>
+    <a class="p-2 text-dark text-decoration-none" routerLink="/shop">Shop</a>
+    <a class="p-2 text-dark text-decoration-none" routerLink="/contact">Contact</a>
   </nav>
   <div class="d-flex align-items-center">
     <a class="position-relative">
