--- a/src/app/core/server-error/server-error.component.html
+++ b/src/app/core/server-error/server-error.component.html
@@ -1,3 +1,17 @@
 <div class="container mt-5">
-  <h1>Server Error</h1>
+  <h4>Internal server Error - refreshing will make the error disapper</h4>
+  <ng-container *ngIf="error">
+    <h5 class="text-danger">Error: {{ error }}"></h5>
+    <p class="font-weight-bold">
+      This error comes from the server - not Angular
+    </p>
+    <p>What to do next?</p>
+    <ol>
+      <li>Check the network tab in chrome dev tools</li>
+    </ol>
+    <h5>Stack trace</h5>
+    <code class="mt-5" style="background-color: whitesmoke">
+      {{error.details}}
+    </code>
+  </ng-container>
 </div>
