--- a/src/app/core/section-header/section-header.component.html
+++ b/src/app/core/section-header/section-header.component.html
@@ -5,12 +5,11 @@
         <h1>Title Goes Here</h1>
       </div>
       <div class="col-3">
-        <nav>
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Library</li>
-          </ol>
-        </nav>
+        <xng-breadcrumb>
+          <ng-container *xngBreadcrumbItem="let breadcrumbItem">
+            {{ breadcrumbItem | titlecase }}
+          </ng-container>
+        </xng-breadcrumb>
       </div>
     </div>
   </div>
