--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,3 +7,8 @@
 //@import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
 
 //@import "node_modules/font-awesome/css/font-awesome.css"
+label.xng-breadcrumb-trail {
+  color: orange;
+
+}
+
