--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<ngx-spinner type="timer">
+<ngx-spinner>
   <h3>Loading ...</h3>
 </ngx-spinner>
 
 <app-nav-bar></app-nav-bar>
 <app-section-header></app-section-header>
-<div class="container" style="margin-top: 140px">
-  <router-outlet></router-outlet>
-</div>
+<router-outlet></router-outlet>
+<!-- <div class="container" style="margin-top: 140px">
+</div> -->
 <!--bdColor="'rgba(255,255,255,0.7)" color="#333333" -->
