--- a/src/app/core/section-header/section-header.component.html
+++ b/src/app/core/section-header/section-header.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="$any(bcService.breadcrumbs$ | async) as breadcrumbs">
   <section
     *ngIf="breadcrumbs[breadcrumbs.length - 1].label !== 'Home'"
-    class="py-5"
+    class="py-5 mb-3"
     style="margin-top: 105px; background-color: #f5f5f5"
   >
     <div class="container">
