--- a/src/app/shop/product-item/product-item.component.html
+++ b/src/app/shop/product-item/product-item.component.html
@@ -7,6 +7,7 @@
     />
     <div class="d-flex align-items-center justify-content-center hover-overlay">
       <button
+        (click)="addItemToBasket()"
         class="btn btn-primary fa fa-shopping-cart me-2"
       ></button>
       <button routerLink="{{ product.id }}" class="btn btn-primary">
