--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -22,7 +22,12 @@
   <div class="d-flex align-items-center">
     <a routerLink="/basket" class="position-relative">
       <i class="fa fa-shopping-cart fa-2x me-5 text-dark"> </i>
-      <div class="cart-no">5</div>
+      <div
+        class="cart-no"
+        *ngIf="basketService.basketSource$ | async as basket"
+      >
+        {{ getCount(basket.items) }}
+      </div>
     </a>
 
     <a href="" class="btn btn-outline-secondary me-2">Login</a>
