--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -1,1 +1,57 @@
-<p>basket works!</p>
+<div class="container mt-5" >
+  <div *ngIf="(basketService.basketSource$ | async) === null">
+    <p>There is no item in your basket</p>
+  </div>
+  <ng-container *ngIf="(basketService.basketSource$ | async) as basket">
+    <div class="container">
+        <div class="row">
+          <div class="table-responsive">
+            <table class="table">
+              <thead class="thead-light">
+                    <th><div class="py-2">Product</div></th>
+                    <th><div class="py-2">Price</div></th>
+                    <th><div class="py-2">Quantity</div></th>
+                    <th><div class="py-2">Total</div></th>
+                    <th><div class="py-2">Remove</div></th>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of basket.items">
+                  <th>
+                    <div class="p-2 d-inline-block">
+                      <img src="{{item.pictureUrl}}" alt="{{item.productName}}" class="img-fluid" style="max-height: 50px; max-width: 50px;">
+                      <div class="ms-3 d-inline-block align-middle">
+                        <h5 class="mb-0">
+                          <a class="text-dark text-decoration-none">{{item.productName}}</a>
+                        </h5>
+                        <span class="text-muted fst-italic">
+                          Type: {{item.type}}
+                        </span>
+                      </div>
+                    </div>
+                  </th>
+                  <td class="align-middle"><strong> {{item.price | currency}}</strong></td>
+                  <td class="align-middle">
+                    <div class="d-flex align-items-center">
+                      <i class="fa fa-minus-circle text-warning me-2" style="cursor: pointer; font-size: 2em;"></i>
+                      <strong style="font-size: 1.5em;">{{item.quantity}}</strong>
+                      <i class="fa fa-plus-circle text-warning me-2 mx-2" style="cursor: pointer; font-size: 2em"></i>
+                    </div>
+                  </td>
+                  <td class="align-middle"><strong>{{item.price * item.quantity | currency}}</strong></td>
+                  <td class="align-middle">
+                    <a  class="text-danger">
+                      <i class="fa fa-trash" style="font-size: 2em;cursor: pointer;"></i>
+                    </a>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+    </div>
+  </ng-container>
+
+</div>
+
+
