Adding the basket component functions

--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -44,6 +44,7 @@
                     <i
                       class="fa fa-minus-circle text-warning me-2"
                       style="cursor: pointer; font-size: 2em"
+                      (click)="removeItem(item.id,1)"
                     ></i>
                     <strong style="font-size: 1.5em">{{
                       item.quantity
@@ -51,6 +52,7 @@
                     <i
                       class="fa fa-plus-circle text-warning me-2 mx-2"
                       style="cursor: pointer; font-size: 2em"
+                      (click)="incrementQuantity(item)"
                     ></i>
                   </div>
                 </td>
@@ -62,6 +64,7 @@
                     <i
                       class="fa fa-trash"
                       style="font-size: 2em; cursor: pointer"
+                      (click)="removeItem(item.id, item.quantity)"
                     ></i>
                   </a>
                 </td>
