--- a/src/app/core/nav-bar/nav-bar.component.html
+++ b/src/app/core/nav-bar/nav-bar.component.html
@@ -30,7 +30,7 @@
       </div>
     </a>
 
-    <a href="" class="btn btn-outline-secondary me-2">Login</a>
-    <a href="" class="btn btn-outline-secondary me-2">Sign up</a>
+    <a routerLink="account/login" class="btn btn-outline-secondary me-2">Login</a>
+    <a routerLink="account/register" class="btn btn-outline-secondary me-2">Sign up</a>
   </div>
 </header>
